--- a/src/app/navegacao/menu/menu.component.html
+++ b/src/app/navegacao/menu/menu.component.html
@@ -11,7 +11,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/home']">Produtos</a>
+            <a class="nav-link" [routerLink]="['/produtos']">Produtos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/sobre']">Sobre</a>
